gccida/c1/pre_insert_copies
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pre_insert_copies/src/gcse.c:5372:21: error: use of undeclared identifier 'uid_cuid_1'
+ ( ( *( ( _DWORD *)uid_cuid_1 + rtint) >> 3) & 0x1FFFFFF8)); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pre_insert_copies/src/gcse.c:5373:44: error: use of undeclared identifier 'uid_cuid_1'
if ( !_bittest64( &v6, *( ( unsigned int *)uid_cuid_1 + rtint)) ) 
                                           ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pre_insert_copies/src/obj/gcse.o] Error 1
